<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">JariTime</string>
    <string name="login_title">JariTime</string>
    <string name="login_slogan">기다리는 건 이제 No! 이제는 자리타임~</string>
    <string name="login_or">또는</string>
    <string name="login_facebook">Facebook으로 로그인</string>
    <string name="login_google">Google로 로그인</string>
    <string name="login_kakao">카카오로 3초 만에 시작하기</string>
    <string name="login_apple">Apple로 계속하기</string>
    <string name="footer_signup">회원가입</string>
    <string name="footer_login">기존 계정으로 로그인</string>
    <string name="footer_inquiry">문의하기</string>
    <string name="search_hint">검색어를 입력하세요</string>
    <string name="location_seongbuk">서울시 성북구</string>
    <string name="place_detail_title">장소 상세</string>
    <string name="seminar_title">세미나실 현황</string>
    <string name="waiting_title">내 웨이팅</string>
    <string name="open_status">영업중</string>
    <string name="map_placeholder">지도</string>
    <string name="photo_placeholder">내부 사진</string>
    <string name="empty_seats">빈 자리</string>
    <string name="in_use">사용 중</string>
    <string name="waiting_count">웨이팅</string>
    <string name="hours_label">운영 시간</string>
    <string name="fee_label">이용 요금</string>
    <string name="amenities_label">편의시설</string>
    <string name="notify_when_free">자리나면 알림받기</string>
    <string name="notify_when_free_detail">자리 생기면 즉시 알려드려요</string>
    <string name="find_other_place">다른 장소 찾기</string>
    <string name="select_seminar">세미나실 선택</string>
    <string name="register_waiting">웨이팅 등록</string>
    <string name="register_waiting_place">이 장소 웨이팅 등록</string>
    <string name="waiting_status">웨이팅 중</string>
    <string name="queue_order">대기 순서</string>
    <string name="estimated_wait">예상 대기</string>
    <string name="planned_use">이용 예정</string>
    <string name="notification_history">알림 내역</string>
    <string name="cancel_waiting">웨이팅 취소</string>
    <string name="select_room">강의실 선택</string>
    <string name="date_label">예약 날짜</string>
    <string name="time_label">예약 시간</string>
    <string name="selection_info">선택 정보</string>
    <string name="toast_login">로그인되었습니다.</string>
    <string name="toast_waiting_registered">웨이팅이 등록되었습니다.</string>
    <string name="toast_waiting_cancelled">웨이팅이 취소되었습니다.</string>
    <string name="nav_home">홈</string>
    <string name="nav_favorites">즐겨찾기</string>
    <string name="nav_alert">알림</string>
    <string name="nav_my">마이</string>
    <string name="nav_search">검색</string>
    <string name="nav_profile">프로필</string>
    <string name="status_full">만석</string>
    <string name="status_remaining">잔여 %1$d석</string>
    <string name="usage_rate_format">사용률 %1$d%%</string>
    <string name="total_seats_format">전체 %1$d석</string>
    <string name="waiting_count_format">웨이팅 %1$d</string>
    <string name="place_address_format">%1$s · %2$.1fkm</string>
    <string name="legend_available_simple">잔여석</string>
    <string name="legend_selected">선택됨</string>
    <string name="legend_occupied">사용 중</string>
    <string name="legend_unavailable">불가</string>
    <string name="room_number_format">세미나실 %1$d</string>
    <string name="queue_position_format">%1$d번째</string>
    <string name="estimated_minutes_format">약 %1$d분</string>
    <string name="planned_hours_format">%1$d시간</string>
    <string name="distance_format">%1$s · %2$.1fkm</string>
    <string name="notify_icon_desc">알림 아이콘</string>
    <string name="no_notifications">알림이 없습니다.</string>
    <string name="google_web_client_id">168525195967-aqvklngnphu2iii873ef5okqlu597etv.apps.googleusercontent.com</string>
</resources>
